# Github

./: .gitignore  CONTEXT.md  Code_Wiki.md  Refactor_Prompt_Final.md  UI_Redesign_Prompt.md  _patch_close_hook.py  _patch_main_window.py  _patch_qss_logfont.py  _patch_repair.py  _patch_save_on_restore.py  _patch_ss_empty_init.py  _patch_style.py  _patch_tidy_ui_state.py  _patch_toggle_save.py  _patch_ui_state.py  _patch_wf_minwidth.py  _patch_wf_saved.py  check_lines.py  fix_err.py  fix_logs.py  fix_main_window.py  fix_sc.py  fix_se.py  fix_se2.py  fix_strings.py  fix_test.py  fix_workflow2.py  fix_workflow_panel.py  reasonix.toml  scan.py  skills-lock.json  目标模式提示词.md  设计文档.md  重新设计ui提示词模板.md  重构执行提示词.md  重构提示词.md
PY/: .editorconfig  .pre-commit-config.yaml  AI开发任务清单.md  CHANGELOG.md  README.md  _add_p5.py  _add_step_empty.py  _add_step_empty2.py  _audit.py  _audit2.py  _audit3.py  _audit4.py  _audit5.py  _audit6.py  _audit_final.py  _audit_wp.py  _bom.py  _check2.py  _check_nav.py  _chk3.py  _chk4.py  _chk5.py  _chk6.py  _chk_import.py  _final_check.py  _fix2.py  _fix3.py  _fix_all.py  _fix_bytes.py  _fix_complete.py  _fix_encoding.py  _fix_final.py  _fix_final2.py  _fix_garbled.py  _fix_indent.py  _fix_lines.py  _fix_lines2.py  _fix_methods.py  _fix_nav.py  _fix_wp.py  (+24 more)
PY/config/: config.json  coordinates.json  tasks.json  ui_state.json  workflows.json
PY/core/: adb_core.py  config_manager.py  config_migrator.py  device_manager.py  error_policy.py  expression_eval.py  logger.py  ocr_engine.py  recorder.py  scrcpy_control.py  screen_capture.py  script_runner.py  (+6 more)
(+211 files in other folders)
